cmake_minimum_required(VERSION 3.15)
project(hw3)

set(CMAKE_CXX_STANDARD 11)

add_executable(hw3  MtmParkingLot.cpp ParkingLot.h ParkingLot.cpp MtmParkingLot.cpp UniqueArrayTest.cpp ParkingLotPrinter.cpp ParkingSpot.cpp Time.cpp ParkingLotPrinter.h ParkingLotTypes.h ParkingSpot.h Time.h UniqueArray.h Vehicle.h)